# book-library

./: .dockerignore  .env.example  .gitignore  DOCKER_SETUP.md  Dockerfile  README.md  SETUP_GUIDE.md  create_sample_data.py  docker-compose.yml  main.py  pyproject.toml  setup.bat  setup.sh
app/: config.py  crud.py  database.py  dependencies.py  logging_config.py  main.py  models.py  schemas.py
app/repositories/: __init__.py  book_repository.py  borrowing_repository.py  member_repository.py
app/routers/: __init__.py  books.py  borrowing.py  config.py  members.py
app/services/: __init__.py  book_service.py  borrowing_service.py  member_service.py
frontend/: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/app/: error.js  global-error.js  layout.jsx  page.jsx
frontend/app/books/: layout.jsx  page.jsx
frontend/app/borrowing/: layout.jsx  page.jsx
frontend/app/members/: layout.jsx  page.jsx
frontend/components/: BookForm.jsx  BookTable.jsx  BorrowForm.jsx  BorrowingTable.jsx  DataTable.jsx  ErrorBoundary.jsx  MemberForm.jsx  MemberTable.jsx  Navbar.jsx  ReturnForm.jsx
tests/: conftest.py
tests/integration/: test_books_api.py
tests/unit/: test_fine_calculation.py  test_schemas.py
